# rustacean-authorship-action

./: Cargo.toml  Justfile  LICENSE  README.md  action.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  diff.yml  release.yml  test.yml
crates/action/: Cargo.toml
crates/action/src/: github_pr_summary.rs  github_pr_validate.rs  main.rs
crates/mock/: Cargo.toml
crates/mock/fixtures/: pulls-files.json  pulls.json
crates/mock/src/: main.rs
src/: github_pr_summary.rs  main.rs
src/services/: mod.rs  rustacean_author.rs
