[package]
name = "rustacean-authorship-action"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["std", "derive", "env"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
url = "2.3.1"
