[workspace]
members = [
    "crates/action",
    "crates/mock",
]
default-members = [
    "crates/action",
    "crates/mock",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.95", default-features = false }
axum = "0.8.1"
clap = { version = "4.5.26", default-features = false }
reqwest = { version = "0.12.12", default-features = false }
serde = { version = "1.0.188", default-features = false }
tokio = { version = "1.42.0", default-features = false }
url = { version = "2.3.1", default-features = false }
